--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -407,7 +407,6 @@
 /* Button */
 
 	input[type="submit"],
-	input[type="reset"],
 	input[type="button"],
 	button,
 	.button {
@@ -430,11 +429,11 @@
 		cursor: pointer;
 		text-align: center;
 		text-decoration: none;
+		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		white-space: nowrap;
 	}
 
 		input[type="submit"]:hover,
-		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
@@ -443,7 +442,6 @@
 		}
 
 		input[type="submit"].icon,
-		input[type="reset"].icon,
 		input[type="button"].icon,
 		button.icon,
 		.button.icon {
@@ -451,7 +449,6 @@
 		}
 
 			input[type="submit"].icon:before,
-			input[type="reset"].icon:before,
 			input[type="button"].icon:before,
 			button.icon:before,
 			.button.icon:before {
@@ -459,7 +456,6 @@
 			}
 
 		input[type="submit"].fit,
-		input[type="reset"].fit,
 		input[type="button"].fit,
 		button.fit,
 		.button.fit {
@@ -469,7 +465,6 @@
 		}
 
 		input[type="submit"].small,
-		input[type="reset"].small,
 		input[type="button"].small,
 		button.small,
 		.button.small {
@@ -477,7 +472,6 @@
 		}
 
 		input[type="submit"].big,
-		input[type="reset"].big,
 		input[type="button"].big,
 		button.big,
 		.button.big {
@@ -485,8 +479,6 @@
 		}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
-		input[type="reset"].disabled,
-		input[type="reset"]:disabled,
 		input[type="button"].disabled,
 		input[type="button"]:disabled,
 		button.disabled,
